# Simple-Network-Monitoring-System-main

./: README.md  alerts_log.txt  cli.py  main.py  main_gui.py  monitoring_core.py  network_monitor.db  network_monitoring.db  network_monitoring.db-journal  packet_processing.py  setup.cfg  todo.md  traffic_summary.py
TheWatcher.egg-info/: PKG-INFO
configs/: config.json
docs/: README.md  Untitled Diagram.drawio
src/: __init__.py  alerts.py  alerts_gui.py  alerts_log.txt  cli.py  dashboard.py  devices_gui.py  filters.py  logging_setup.py  login.py  main.py  main_gui.py  monitor_state.py  monitoring_core.py  network_monitor.db  network_monitoring.db  network_monitoring.db-journal  network_scanner.py  packet_processing.py  packets_gui.py  real_time_monitor.py  retrieve_logs.py  settings_gui.py  traffic_summary.py
src/SimpleNetworkMonitoring.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/SimpleNetworkMonitoringSystem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/Snms.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/TheWatcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/database/: database.py
src/gui/: dashboard.py  database.py  gui.py  maiin.py  main.py  network_monitoring.db  settings.py  views.py
