[metadata]
name = Snms
version = 0.1.1
author = Bigst3pp3r
author_email = mltnkarani@gmail.com
description = A simple network monitoring tool.
long_description = file: docs/README.md
long_description_content_type = text/markdown
url = https://github.com/Bigst3pp3r/Simple-Network-Monitoring-System-main
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    customtkinter
    pyshark
    matplotlib
    scapy

[options.entry_points]
console_scripts =
    snm_cli = Snms.cli: main
    snm_gui = Snms.gui: main
   

[options.packages.find]
where = src

